@@ -1,3 +1,4 @@
+Micro tab: Kit resets on "reset all"
 Micro tab: Fixed: Kits extend into the border of the kit control panel
 Micro tab: Added kits for different solutes
 Micro tab: Ensure that crystal component ratios are exact (such as 1:1 for NaCl or 2:1 for CaCl)
